  and should still be used in code meant to be compatible with v1.13 or older.
* MediaWiki can be forced to use private IPs forwarded by a proxy server by
  using $wgUsePrivateIPs.
* The 'BeforeWatchlist' hook has been removed due to internal changes in
  Special:Watchlist. 'SpecialWatchlistQuery' should now be used by extensions
  to customize the watchlist database query.


=== Migrated extensions ===
The following extensions are migrated into MediaWiki 1.14:

* Special:DeletedContributions to show deleted user contributions (was
  extension DeletedContributions)
* Special:Log/newusers recording new users (was extension Newuserlog)
* Special:LinkSearch to search for external links (was extension LinkSearch)
* RenderHash
* NoMoveUserPages
* UniversalEditButton

=== New features in 1.14 ===

* New URL syntaxes for Special:ListUsers - 'Special:ListUsers/USER' and
  'Special:ListUsers/GROUP/USER', in addition to the older syntax
  'Special:ListUsers/GROUP' where GROUP is a valid group name.
* Configurable per-namespace and per-page notices for the edit form,
  respectively MediaWiki:Editnotice-# where # is the namespace number, and
  MediaWiki:Editnotice-#-PAGENAME where # is the page's namespace number and
  PAGENAME is the page name minus the namespace prefix.
* (bug 8068) New __INDEX__ and __NOINDEX__ magic words allow user control of
  search engine indexing on a per-article basis.
* Handheld stylesheet options
* Added 'DoEditSectionLink' hook as a cleaner unified version of the old
  'EditSectionLink' and 'EditSectionLinkForOther' hooks.  Note that the
  'EditSectionLinkForOther' hook has been removed, but 'EditSectionLink' is
  run in all cases instead, so extensions using the old hooks should still work
  if they ran roughly the same code for both hooks (as is almost certain).
* Signature (~~~~) "cleaning", i.e. template removal, can be disabled with
  $wgCleanSignatures=false
* Extensions can use the SkinBuildSidebar hook to modify the content of the